<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/mRlToolbarChat"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/mImgBackProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back_black" />

            <com.chat.zipchat.clone.CustomText.CustomRegularTextView
                android:id="@+id/mTxtContactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:singleLine="true"
                android:text="@string/contact_info"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="@color/colorPrimary">

            <android.support.v7.widget.CardView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_centerInParent="true"
                app:cardCornerRadius="8dp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/mImgContact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/defult_user" />

            </android.support.v7.widget.CardView>


        </RelativeLayout>

        <com.chat.zipchat.clone.CustomText.CustomRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <com.chat.zipchat.clone.CustomText.CustomRegularTextView
            android:id="@+id/mUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.chat.zipchat.clone.CustomText.CustomRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mobile_number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <com.chat.zipchat.clone.CustomText.CustomRegularTextView
            android:id="@+id/mUserMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mobile_number"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.chat.zipchat.clone.CustomText.CustomRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/status"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <com.chat.zipchat.clone.CustomText.CustomRegularTextView
            android:id="@+id/mUserStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/available"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.chat.zipchat.clone.CustomText.CustomRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.chat.zipchat.clone.CustomText.CustomRegularTextView
            android:id="@+id/mBlockContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/block_contact"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.chat.zipchat.clone.CustomText.CustomRegularTextView
            android:id="@+id/mAddFavourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_to_favourite"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.chat.zipchat.clone.CustomText.CustomRegularTextView
            android:id="@+id/mRemoveFavourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/remove_from_favourite"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>